# rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  rl.spec
.github/workflows/: pre-commit.yml  publish.yml  release.yml
reg/: cli.py
rl/: __init__.py  cli.py  duo.py  install.py  publish.py
rl/cli/: cli.py  duo.py  main.py  nodelist_parser.py  publish.py
rl/llm/: __init__.py  config.py  data_collator.py  engines.py  merge_lora.py  modal_entrypoint.py  modal_example_entrypoint.py  modal_utils.py  openai_batched.py  token.py  token_utils.py  train_llm.py
rl/llm/engines/: __init__.py  client.py  config.py  core.py  local.py
rl/utils/: __init__.py  bucket.py  click.py  core.py  dev_sync.py  flags.py  io.py  iter.py  llm.py  locate_passage.py  logger.py  plot.py  spark.py
