[project]
name = "rl"
version = "0.7.0"
authors = [
    { name = "Faiz Surani", email = "faiz@law.stanford.edu" },
    { name = "Varun Magesh", email="vim@law.stanford.edu" }
]
description = "A CLI for various RegLab / Sherlock tasks"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "click",
    "rich",
    "rich_click",
    "tqdm",
    "ipdb",
    "requests",
    "regex",
    "questionary",
    "python-dotenv",
    "matplotlib",
    "pandas",
    "pyspark",
    "unidecode",
    "watchdog",
    "legal-segmenter @ git+https://github.com/lexeme-dev/legal-segmenter@main",
]

[project.optional-dependencies]
sherlock = [
    "pexpect",
    "pyotp",
    "pycryptodome",
    "appdirs",
    "StrEnum",
]
local_llm = [
    "rl[llm]",
    "vllm==0.5.3post1; platform_system == 'Linux'",
    "peft",
    "trl",
    "datasets",
    "wandb",
    "huggingface_hub",
]
llm = [
    "transformers>=4.43",
    "torch",
    "modal",
    "anthropic",
    "openai",
    "google-generativeai"
]
dev = [
    "build",
    "pygithub",
    "pyinstaller",
    "black",
    "isort",
    "mypy",
]

[project.urls]
homepage = "https://github.com/ProbablyFaiz/rl"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
rl = "rl.cli.main:cli"
train_llm = "rl.llm.train_llm:main"
merge_lora = "rl.llm.merge_lora:main"
devsync = "rl.utils.dev_sync:main"

[tool.setuptools.packages]
find = {}

[tool.isort]
profile = "black"
src_paths = ["rl"]
skip_gitignore = true

[tool.mypy]
disable_error_code = ["import", "override"]

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["F401"]
