[project]
name = "rl"
version = "0.9.0"
authors = [
    { name = "Faiz Surani", email = "faiz@law.stanford.edu" },
    { name = "Varun Magesh", email="vim@law.stanford.edu" }
]
description = "Utilities for various RegLab / Sherlock tasks"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "rich",
    "rich_click",
    "tqdm",
    "ipdb",
    "requests",
    "python-dotenv",
    "StrEnum",
    "pydantic>=2",
    "typing-extensions",
]

[project.optional-dependencies]
segmenter = [
    "unidecode",
    "legal-segmenter @ git+https://github.com/lexeme-dev/legal-segmenter@main",
]
devsync = [
    "watchdog",
]
sherlock = [
    "pexpect",
    "pyotp",
    "pycryptodome",
    "appdirs",
    "questionary",
    "paramiko",
]
local_llm = [
    "rl[llm]",
    "transformers>=4.43",
    "torch",
    "vllm~=0.5.3post1; platform_system == 'Linux'",
    "peft",
    "trl",
    "datasets",
    "wandb",
    "huggingface_hub",
    "pandas",
]
llm = [
    "modal",
    "anthropic",
    "openai",
    "google-generativeai",
]
spark = [
    "pyspark",
]
plot = [
    "matplotlib",
    "pandas",
]

[project.urls]
homepage = "https://github.com/ProbablyFaiz/rl"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
rl = "rl.cli.main:cli"
train_llm = "rl.llm.train_llm:main"
merge_lora = "rl.llm.merge_lora:main"
devsync = "rl.utils.dev_sync:main"

[tool.setuptools.packages]
find = {}

[tool.mypy]
disable_error_code = ["import", "override"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["B", "E", "I", "N", "PTH", "COM", "C4", "UP"]
extend-ignore = ["COM812", "B027", "E501"]

[tool.uv]
dev-dependencies = [
    "build",
    "pygithub",
    "pyinstaller",
    "mypy",
    "ruff",
    "pre-commit",
    "ipython>=8.26.0",
]
